--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,66 @@
-$bg_color: rgb(21, 0, 255);
+@use 'variaveis';
+@use 'hero';
+
+@font-face {
+    font-family: Avenir;
+    src: url(../../assets/fonts/Avenir-Regular.woff2);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: Avenir;
+    src: url(../../assets/fonts/Avenir-Bold.woff2);
+    font-weight: 700;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 body{
-    background-color: $bg_color;
+    background-color: variaveis.$Cor_de_fundo;
+    font-family: Avenir, sans-serif;
+}
+
+@mixin text($font_size: 16px){
+    font-size: $font_size;
+    line-height: $font_size +10px;
+    color: variaveis.$Cor_texto_principal;
+}
+@mixin title($font_size: 40px) {
+    @include text($font_size);
+    color: variaveis.$Cor_texto_secundario;
+}
+
+.text--big{
+    @include text(18px);
+}
+
+.text{
+    @include text;
+}
+
+.text--small{
+    @include text(12px);
+}
+
+.title--big{
+    @include title(44px);
+}
+
+.title{
+    @include title;
+}
+
+.title--small{
+    @include title(28px);
+}
+
+.link-text {
+    @include text(18px);
+    color: variaveis.$Cor_texto_secundario;
+    text-decoration: underline;
 }
