ajustes no mobile

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $Cor_de_fundo:#040714;
 $Cor_texto_principal:silver;
 $Cor_texto_secundario:#f9f9f9;
+$Cor_fundo_btn_primario: #6421ff;
+$Cor_fundo_btn_secundario:#0063e5;
+$Cor_fundo_btn_dark: #000;
