--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,11 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
+
 
 @font-face {
     font-family: Avenir;
@@ -20,6 +25,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 
@@ -39,26 +45,50 @@ body{
 
 .text--big{
     @include text(18px);
+
+    @media(max-width:768px){
+        @include text(15px);
+    }
 }
 
 .text{
     @include text;
+
+    @media(max-width:768px){
+        @include text(14px);
+    }
 }
 
 .text--small{
     @include text(12px);
+
+    @media(max-width:768px){
+        @include text(11px);
+    }
 }
 
 .title--big{
     @include title(44px);
+
+    @media(max-width:768px){
+        @include title(26px);
+    }
 }
 
 .title{
     @include title;
+
+    @media(max-width:768px){
+        @include title(24px);
+    }
 }
 
 .title--small{
     @include title(28px);
+
+    @media(max-width:768px){
+        @include title(22px);
+    }
 }
 
 .link-text {
@@ -68,14 +98,94 @@ body{
 }
 
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$Cor_texto_secundario;
-    background-color: #6421ff;
+    background-color: variaveis.$Cor_fundo_btn_primario;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$Cor_fundo_btn_primario;
+
+
+    &:hover{
+        background-color: lighten(variaveis.$Cor_fundo_btn_primario, 3%);
+    }
+
+
+    &--secundary{
+        background-color: variaveis.$Cor_fundo_btn_secundario;
+        border-color:variaveis.$Cor_fundo_btn_secundario;
+
+        &:hover{
+            background-color: lighten(variaveis.$Cor_fundo_btn_secundario, 3%);
+        }
+    }
+
+    &--dark{
+        background-color: rgba(variaveis.$Cor_fundo_btn_dark, 0.8);
+        border-color:variaveis.$Cor_texto_secundario;
+
+        &:hover {
+            background-color: variaveis.$Cor_texto_secundario;
+            color: variaveis.$Cor_de_fundo;
+        }
+    }
+}
+
+.image-text-section{
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    @media(max-width:768px){
+        display: block;
+    }
+
+
+    img{
+        max-width: 100%;
+    }
+
+    &__text_container {
+        padding: 0 2vw;
+
+        h2{
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width{
+        display: block;
+        position: relative;
+
+        img{
+            width: 100%;
+        }
+
+        &__text_container{
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @media(max-width:768px){
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+            
+        }
+    }
 }
